--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
     "scss.lint.validProperties": [
         "page"
     ],
+    "asciidoc.antora.enableAntoraSupport": false,
     //     "asciidoc.preview.scrollPreviewWithEditor": false,
     //   "asciidoc.preview.scrollEditorWithPreview": false,
 }
